# rag-journey-poc-to-prod

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EVALUATION_QUICKSTART.md  LICENSE  Makefile  README.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_ALL_WEEKS.md  REPOSITORY_ABOUT.md  release-notes.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml  eval_gate.yml  release.yml  rollback.yml
config/: eval_thresholds.json  eval_thresholds_ci.json  guardrails_thresholds.json
data/: adversarial_prompts.json  ml_short.txt  python_fastapi.txt  qdrant_notes.txt  rag_basics.txt  sample.txt  test_sample.html  test_sample.md
data/eval/: demo_dataset.json  rag_default_eval.json  rag_test_small.json
docs/: AGENT_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  adversarial-testing-runbook.md  bm25-filters.md  cache-architecture.md  cache-config-integration-summary.md  cache-config-integration.md  cache-config-quick-ref.md  ci-cd-pipeline.md  cost-tracking.md  embedding-cache.md  evaluation-harness.md  experimentation.md  guardrails-implementation.md  health-check.md  index-mappings-implementation.md  index-mappings.md  metadata-filters.md  observability.md  overflow-guards.md  performance-profiling.md  query-understanding.md  redis-cache.md  reranking.md  retry-backoff.md  retry-health-implementation.md  rollback-playbook.md  self-reflection-planning.md  token-budgets.md  truncation.md
docs/week-plans/: week-1.md  week-2.md  week-3.md  week-4.md  week-5-summary.md  week-5.md  week-6.md  week-7.md  week-8.md
examples/: README.md  agent_demo.py  benchmark_retrieval.py  bm25_filters_demo.py  cache_demo.py  cache_demo_advanced.py  cache_settings_demo.py  cost_tracking_demo.py  evaluation_demo.py  fusion_benchmark.py  index_mappings_demo.py  metadata_filters_demo.py  performance_profiling_demo.py  query_understanding_ablation.py  query_understanding_demo.py  reranker_benchmark.py  reranker_demo.py  retry_health_demo.py  sandbox_demo.py  self_reflection_demo.py  throughput_test.py  verify_cache_structure.py  verify_config.py
infra/docker/: compose.yml
scripts/: check_canary_health.py  ci_eval_gate.py  create_eval_datasets.py  create_releases.sh  create_sample_results.py  generate_benchmark_corpus.py  generate_dashboard.py  rehearse_rollback.py  test_metrics_standalone.py  verify_evaluation.py
src/: config.py  dependencies.py  exceptions.py  main.py
src/api/router/: agent_router.py  ask_router.py  health_router.py  ingestion_router.py  rag_router.py
src/models/: ask.py  guardrails.py  health.py  rag_request.py
src/schemas/: __init__.py
src/schemas/api/: __init__.py  ingestion.py  rag_request.py
src/schemas/services/: __init__.py  agent.py  cache.py  cost.py  embeddings.py  evaluation.py  performance.py  query_understanding.py  reranker.py  retry.py  token_budgets.py  vectorstore.py
src/services/: __init__.py  health_check.py  retry.py  truncation.py
src/services/agent/: __init__.py  benchmarking.py  factory.py  feedback.py  graph.py  nodes.py  planning.py  reflection.py  state.py
src/services/cache/: __init__.py  client.py  factory.py  metrics.py  redis_client.py  semantic_cache.py
src/services/chunking/: client.py  factory.py
src/services/cost/: __init__.py  autoscaler.py  model_selector.py  tracker.py
src/services/embeddings/: adapter.py  cache.py  cached_client.py  client.py  factory.py  providers.py  sparse_encoder.py
src/services/evaluation/: __init__.py  dataset.py  harness.py  metrics.py
src/services/experimentation/: __init__.py  analysis.py  canary.py  experiments.py  feature_flags.py  reports.py
src/services/generation/: client.py  factory.py
src/services/guardrails/: __init__.py  audit_log.py  client.py  coordinator.py  factory.py  jailbreak_detector.py  pii_detector.py  safe_response.py  toxicity_filter.py
src/services/ingestion/: client.py  factory.py
src/services/observability/: __init__.py  golden_traces.py  logging.py  metrics.py  slo.py  tracing.py
src/services/performance/: __init__.py  client.py  factory.py  profiler.py  reporter.py
src/services/query_understanding/: __init__.py  client.py  factory.py  rewriter.py  synonym_expander.py
src/services/reranker/: __init__.py  client.py  (+2 more)
tests/: README.md  conftest.py  conftest_agent.py  test_adversarial_guardrails.py  test_agent_metrics.py  test_agent_nodes.py  test_autoscaler.py  test_cache_metrics.py  test_cached_embedding_client.py  test_chunking.py  test_cost_tracker.py  test_embedding_providers.py  test_embeddings.py  test_evaluation_dataset.py  test_filters_bm25.py  test_fusion.py  test_generation.py  test_guardrails_audit.py  test_guardrails_coordinator.py  test_guardrails_pii.py  test_guardrails_safe_response.py  test_guardrails_toxicity.py  test_health_check.py  test_index_mappings.py  test_ingestion.py  test_models.py  test_multiformat_ingestion.py  test_overflow_guards.py  test_pipeline_reranking.py  test_query_understanding.py  test_redis_cache.py  test_reranker.py  test_retry.py  test_semantic_cache.py  test_sparse_encoder.py  test_sparse_search.py  test_token_budgets.py  test_truncation.py
tests/fixtures/: sample_data.json
tests/helpers/: __init__.py  mock_factory.py  test_utils.py
tests/integration/: README.md  conftest.py  test_sandbox_integration.py
tests/unit/: test_dependencies.py
(+94 files in other folders)
