[project]
name = "advanced-rag"
version = "0.1.0"
description = "Advanced RAG (Retrieval-Augmented Generation) System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]
