[project]
name = "advanced-rag"
version = "0.1.0"
description = "Advanced RAG (Retrieval-Augmented Generation) System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-qdrant>=1.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.16.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]
