[project]
name = "advanced-rag"
version = "0.1.0"
description = "Advanced RAG (Retrieval-Augmented Generation) System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.20.1",
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-qdrant>=1.1.0",
    "openai>=2.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.16.2",
    "redis>=5.2.0",
    "sentence-transformers>=3.3.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "bandit>=1.7.10",
    "pre-commit>=4.0.0",
    "ipython>=8.30.0",
    "ipdb>=0.13.13",
]

# Production deployment dependencies
production = [
    "gunicorn>=23.0.0",
    "prometheus-client>=0.21.0",
]

# Optional embedding providers
embeddings = [
    "openai>=1.59.5",
    "cohere>=5.13.4",
]

# Optional document parsers
parsers = [
    "pypdf2>=3.0.1",
    "beautifulsoup4>=4.12.3",
    "markdown>=3.7",
]

# All optional dependencies
all = [
    "advanced-rag[dev,production,embeddings,parsers]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "canary: marks tests as canary tests for CI quick validation",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "PTH",   # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B904",   # raise from None
    "RET504", # unnecessary variable assignment before return
    "SIM108", # use ternary operator (sometimes less readable)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "ARG",    # unused arguments allowed in tests
    "FBT",    # boolean args allowed in tests
]
"__init__.py" = [
    "F401",   # unused imports allowed in __init__.py
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "qdrant_client.*",
    "transformers.*",
    "torch.*",
    "sentence_transformers.*",
    "openai.*",
    "cohere.*",
    "PyPDF2.*",
]
ignore_missing_imports = true

# Ignore stub/incomplete implementations
[[tool.mypy.overrides]]
module = [
    "src.services.guardrails.client",
    "src.services.performance.client",
]
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "__pycache__"]
skips = ["B101"]  # Skip assert_used (used in tests)
